Fix typos in messages.

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -9,7 +9,7 @@ admcommand.useractivity=Activity
 action.studio.go = Go to Nuxeo Studio
 
 tab.nuxeoconnect.status=Nuxeo Connect registration status
-tab.nuxeoconnect.tickets=Nuxeo Connect Tickets
+tab.nuxeoconnect.tickets=Nuxeo Connect tickets
 
 tab.appstore.updates=Nuxeo software updates
 tab.appstore.local=Local packages
@@ -38,9 +38,9 @@ adminsubtab.sysinfo.repostat.perdocumenttypes=Per document types
 adminsubtab.sysinfo.repostat.numberofdocuments=Number of documents
 adminsubtab.sysinfo.repostat.numberofversions=Number of versions
 adminsubtab.sysinfo.repostat.numberofblobs=Number of blobs
-adminsubtab.sysinfo.repostat.totalsizeofblobs=Total size of blobs
+adminsubtab.sysinfo.repostat.totalsizeofblobs=Total size of blobs (kB)
 adminsubtab.sysinfo.repostat.maxtreedepth=Max tree depth
-adminsubtab.sysinfo.repostat.maxblobsize=Max blob size (KBytes)
+adminsubtab.sysinfo.repostat.maxblobsize=Max blob size (kB)
 adminsubtab.sysinfo.repostat.biggestfolder=Biggest folder
 adminsubtab.sysinfo.repostat.averagereadspeed=Average read speed (doc/s)
 adminsubtab.sysinfo.repostat.repositoryinfo=Information about the repository
@@ -55,7 +55,7 @@ adminsubtab.sysinfo.userinfo.page=Page
 adminsubtab.sysinfo.setup=Setup
 adminsubtab.sysinfo.advancedsetup=Advanced setup
 
-adminsubtab.sysinfo.nuxeoserverinfo=Information about deployed Nuxeo Distribution
+adminsubtab.sysinfo.nuxeoserverinfo=Information about deployed Nuxeo distribution
 adminsubtab.sysinfo.nuxeoName=Nuxeo application name
 adminsubtab.sysinfo.nuxeoVersion=Nuxeo application version
 adminsubtab.sysinfo.distribName=Distribution name
@@ -82,7 +82,7 @@ adminsubtab.sysinfo.binariesinfo.sizebinariesgc=Size of garbage collected binari
 label.packagetype=Package type
 label.packagetype.all=All
 label.packagetype.studio=Studio
-label.packagetype.addon=Add-On
+label.packagetype.addon=Add-on
 label.packagetype.hotfix=Hot fix
 
 label.instancetype.dev=Development
@@ -97,7 +97,7 @@ label.subscriptionStatus.wrong_dates=Connect subscription is not correctly setup
 label.subscriptionStatus.no_contract=Can not find a associated connect contract
 
 label.nuxeo.admin=Administration
-label.nuxeo.connect.main=Nuxeo Connect Registration Status
+label.nuxeo.connect.main=Nuxeo Connect registration status
 label.nuxeo.connect.appcenter=Nuxeo Application Store
 label.nuxeo.admin.sysinfo=System information
 
@@ -116,8 +116,8 @@ label.nuxeo.connect.offlineRegistration=Offline instance registration
 label.nuxeo.connect.onlineRegistrationDescription=Use this if you already have a Nuxeo Connect Account and your Nuxeo instance has an Internet access
 label.nuxeo.connect.onlineRegistrationStep2Description = Now that you are authenticated against the connect server, please select the Project that must be associated to your instance.
 label.nuxeo.connect.offlineRegistrationDescription=Use this if you already have a Nuxeo Connect Account but your Nuxeo instance is not connected to the Internet.
-label.nuxeo.connect.login=Your Nuxeo Connect Login
-label.nuxeo.connect.password=Your Nuxeo Connect Password
+label.nuxeo.connect.login=Your Nuxeo Connect login
+label.nuxeo.connect.password=Your Nuxeo Connect password
 action.connect.login.check=Authenticate to Connect
 label.nuxeo.connect.instanceDescription=Description of your Nuxeo instance
 label.nuxeo.connect.instanceType=Instance type
@@ -125,9 +125,9 @@ label.nuxeo.connect.associatedProject=Associated project
 action.connect.register=Register this instance
 action.connect.cancel=Drop registration
 action.connect.refreshStatus = Refresh
-label.nuxeo.connect.CLID=CLID provided by Nuxeo Connect Web Site
+label.nuxeo.connect.CLID=CLID provided by Nuxeo Connect website
 label.nuxeo.connect.offlineReg.message1=First, get the CLID number on the
-label.nuxeo.connect.offlineReg.webSite=Nuxeo Connect Web Site
+label.nuxeo.connect.offlineReg.webSite=Nuxeo Connect website
 label.nuxeo.connect.offlineReg.message2=You will be asked to provide your instance technical identifier:
 label.nuxeo.connect.offlineReg.message3=Then, paste here the CLID number provided by Nuxeo Connect and register!
 label.nuxeo.connect.refreshDate=Last refresh date
@@ -144,7 +144,7 @@ label.nuxeo.connect.contractStatus=Contract Status:
 label.nuxeo.connect.contractEndDate=Contract end date:
 label.nuxeo.connect.description=Description:
 label.nuxeo.connect.statusError=Connect server returned an error while checking your registration:
-label.nuxeo.connect.securityError=Can not authenticate against the Nuxeo Connect Server. If you just registered with the setup wizard or the Connect Website, check that you did not forget to click on the activation link in the mail sent to you during the registration.
+label.nuxeo.connect.securityError=Can not authenticate against the Nuxeo Connect Server. If you just registered with the setup wizard or the Connect website, check that you did not forget to click on the activation link in the mail sent to you during the registration.
 label.nuxeo.connect.id.CLID=Logical instance identifier (CLID)
 label.nuxeo.connect.id.CTID=Technical instance identifier (CTID)
 
