Fix quote escaping in messages.

--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_es.properties
@@ -1949,7 +1949,7 @@ error.smart.query.invalidQuery=Consulta no v\u00e1lida
 
 # google translation: please check
 #en: There is more than one criterion using ''{0}''
-error.sortInfoValidator.conflictingCriteria=Hay m\u00e1s de un criterio basado en {0}&#39;&#39;&#39;&#39;
+error.sortInfoValidator.conflictingCriteria=Hay m\u00e1s de un criterio basado en {0}''''
 
 # google translation: please check
 #en: There is an empty sort criterion
@@ -2327,71 +2327,71 @@ javax.faces.component.UISelectOne.INVALID=El valor no es una opci\u00f3n v\u00e1
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date.
-javax.faces.converter.DateTimeConverter.DATE=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendido como una fecha.
+javax.faces.converter.DateTimeConverter.DATE=''''{0} no pod\u00eda ser entendido como una fecha.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date. Example: {1}
-javax.faces.converter.DateTimeConverter.DATE_detail=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendido como una fecha. Ejemplo: {1}
+javax.faces.converter.DateTimeConverter.DATE_detail=''''{0} no pod\u00eda ser entendido como una fecha. Ejemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time.
-javax.faces.converter.DateTimeConverter.DATETIME=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendida como una fecha y hora.
+javax.faces.converter.DateTimeConverter.DATETIME=''''{0} no pod\u00eda ser entendida como una fecha y hora.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time. Example: {1}
-javax.faces.converter.DateTimeConverter.DATETIME_detail=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendida como una fecha y hora. Ejemplo: {1}
+javax.faces.converter.DateTimeConverter.DATETIME_detail=''''{0} no pod\u00eda ser entendida como una fecha y hora. Ejemplo: {1}
 
 # google translation: please check
 #en: A ''pattern'' or ''type'' attribute must be specified to convert the value ''{0}''.
-javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Un patr\u00f3n&#39;&#39;&#39;&#39;o&#39;&#39;tipo&#39;&#39;atributo debe ser especificado para convertir el valor&#39;&#39;&#39;&#39;{0}.
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Un patr\u00f3n''''o''tipo''atributo debe ser especificado para convertir el valor''''{0}.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time.
-javax.faces.converter.DateTimeConverter.TIME=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendido como un tiempo.
+javax.faces.converter.DateTimeConverter.TIME=''''{0} no pod\u00eda ser entendido como un tiempo.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time. Example: {1}
-javax.faces.converter.DateTimeConverter.TIME_detail=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendido como un tiempo. Ejemplo: {1}
+javax.faces.converter.DateTimeConverter.TIME_detail=''''{0} no pod\u00eda ser entendido como un tiempo. Ejemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' must be a number consisting of one or more digits.
-javax.faces.converter.DoubleConverter.DOUBLE=&#39;&#39;&#39;&#39;{0} debe ser un n\u00famero consistente de uno o m\u00e1s d\u00edgitos.
+javax.faces.converter.DoubleConverter.DOUBLE=''''{0} debe ser un n\u00famero consistente de uno o m\u00e1s d\u00edgitos.
 
 # google translation: please check
 #en: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: 66.6
-javax.faces.converter.DoubleConverter.DOUBLE_detail=&#39;&#39;{0}&#39;&#39;debe ser un n\u00famero entre 4.9E-324 y 1.7976931348623157E308 Ejemplo: 66.6
+javax.faces.converter.DoubleConverter.DOUBLE_detail=''{0}''debe ser un n\u00famero entre 4.9E-324 y 1.7976931348623157E308 Ejemplo: 66.6
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value.
-javax.faces.converter.NumberConverter.CURRENCY=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendida como un valor de la moneda.
+javax.faces.converter.NumberConverter.CURRENCY=''''{0} no pod\u00eda ser entendida como un valor de la moneda.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value. Example: {1}
-javax.faces.converter.NumberConverter.CURRENCY_detail=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendida como un valor de la moneda. Ejemplo: {1}
+javax.faces.converter.NumberConverter.CURRENCY_detail=''''{0} no pod\u00eda ser entendida como un valor de la moneda. Ejemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number.
-javax.faces.converter.NumberConverter.NUMBER=&#39;&#39;&#39;&#39;{0} no es un n\u00famero.
+javax.faces.converter.NumberConverter.NUMBER=''''{0} no es un n\u00famero.
 
 # google translation: please check
 #en: ''{0}'' is not a number. Example: {1}
-javax.faces.converter.NumberConverter.NUMBER_detail=&#39;&#39;&#39;&#39;{0} no es un n\u00famero. Ejemplo: {1}
+javax.faces.converter.NumberConverter.NUMBER_detail=''''{0} no es un n\u00famero. Ejemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern.
-javax.faces.converter.NumberConverter.PATTERN=&#39;&#39;&#39;&#39;{0} no es un patr\u00f3n de n\u00fameros.
+javax.faces.converter.NumberConverter.PATTERN=''''{0} no es un patr\u00f3n de n\u00fameros.
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern. Example: {1}
-javax.faces.converter.NumberConverter.PATTERN_detail=&#39;&#39;&#39;&#39;{0} no es un patr\u00f3n de n\u00fameros. Ejemplo: {1}
+javax.faces.converter.NumberConverter.PATTERN_detail=''''{0} no es un patr\u00f3n de n\u00fameros. Ejemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage.
-javax.faces.converter.NumberConverter.PERCENT=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendido como un porcentaje.
+javax.faces.converter.NumberConverter.PERCENT=''''{0} no pod\u00eda ser entendido como un porcentaje.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage. Example: {1}
-javax.faces.converter.NumberConverter.PERCENT_detail=&#39;&#39;&#39;&#39;{0} no pod\u00eda ser entendido como un porcentaje. Ejemplo: {1}
+javax.faces.converter.NumberConverter.PERCENT_detail=''''{0} no pod\u00eda ser entendido como un porcentaje. Ejemplo: {1}
 
 # Human translation
 #en: Value is greater than allowable maximum of {0}
@@ -2849,11 +2849,11 @@ label.contentview.export.atom=ATOM exportaci\u00f3n
 
 # google translation: please check
 #en: ATOM feed for content view ''{0}''
-label.contentview.export.atom.title=ATOM RSS para ver el contenido {0}&#39;&#39;&#39;&#39;
+label.contentview.export.atom.title=ATOM RSS para ver el contenido {0}''''
 
 # google translation: please check
 #en: ATOM feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.atom.titleWithDocument=ATOM RSS para&#39;&#39;&#39;&#39;{0} documento y ver su contenido&#39;&#39;&#39;&#39;{1}
+label.contentview.export.atom.titleWithDocument=ATOM RSS para''''{0} documento y ver su contenido''''{1}
 
 # google translation: please check
 #en: CSV Export
@@ -2873,11 +2873,11 @@ label.contentview.export.rss=RSS de las exportaciones
 
 # google translation: please check
 #en: RSS feed for content view ''{0}''
-label.contentview.export.rss.title=RSS feed para ver el contenido {0}&#39;&#39;&#39;&#39;
+label.contentview.export.rss.title=RSS feed para ver el contenido {0}''''
 
 # google translation: please check
 #en: RSS feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.rss.titleWithDocument=RSS feed para&#39;&#39;&#39;&#39;{0} documento y ver su contenido&#39;&#39;&#39;&#39;{1}
+label.contentview.export.rss.titleWithDocument=RSS feed para''''{0} documento y ver su contenido''''{1}
 
 # google translation: please check
 #en: Excel Export
@@ -3588,7 +3588,7 @@ label.directories.country.Kyrgyz_Republic=Republica de Kyrgyz
 # Human translation
 #en: Lao People's Democratic Republic
 label.directories.country.Lao_People_s_Democratic_Republic=Rep\u00fablica Democr\u00e1tica Popular de Laos
-#google: Lao People&#39;s Democratic Republic
+#google: Lao People's Democratic Republic
 
 # Human translation
 #en: Latvia
