--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pl.properties
@@ -2000,7 +2000,7 @@ error.smart.query.invalidQuery=nieprawid\u0142owe zapytanie
 
 # google translation: please check
 #en: There is more than one criterion using ''{0}''
-error.sortInfoValidator.conflictingCriteria=Istnieje wi\u0119cej ni\u017c jedno kryterium przy {0}&#39;&#39;&#39;&#39;
+error.sortInfoValidator.conflictingCriteria=Istnieje wi\u0119cej ni\u017c jedno kryterium przy {0}''''
 
 # google translation: please check
 #en: There is an empty sort criterion
@@ -2395,71 +2395,71 @@ javax.faces.component.UISelectOne.INVALID=Warto\u015b\u0107 nie jest wa\u017cna 
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date.
-javax.faces.converter.DateTimeConverter.DATE=&#39;&#39;&#39;&#39;{0} nie mo\u017cna rozumie\u0107 jako dat\u0119.
+javax.faces.converter.DateTimeConverter.DATE=''''{0} nie mo\u017cna rozumie\u0107 jako dat\u0119.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date. Example: {1}
-javax.faces.converter.DateTimeConverter.DATE_detail=&#39;&#39;&#39;&#39;{0} nie mo\u017cna rozumie\u0107 jako dat\u0119. Przyk\u0142ad: {1}
+javax.faces.converter.DateTimeConverter.DATE_detail=''''{0} nie mo\u017cna rozumie\u0107 jako dat\u0119. Przyk\u0142ad: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time.
-javax.faces.converter.DateTimeConverter.DATETIME=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiane jako data i godzina.
+javax.faces.converter.DateTimeConverter.DATETIME=''''{0} nie mo\u017ce by\u0107 rozumiane jako data i godzina.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time. Example: {1}
-javax.faces.converter.DateTimeConverter.DATETIME_detail=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiane jako data i godzina. Przyk\u0142ad: {1}
+javax.faces.converter.DateTimeConverter.DATETIME_detail=''''{0} nie mo\u017ce by\u0107 rozumiane jako data i godzina. Przyk\u0142ad: {1}
 
 # google translation: please check
 #en: A ''pattern'' or ''type'' attribute must be specified to convert the value ''{0}''.
-javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Wz\u00f3r&#39;&#39;&#39;&#39;lub&#39;&#39;typu&#39;&#39;atrybut musi by\u0107 podany do konwersji warto\u015bci&#39;&#39;&#39;&#39;{0}.
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Wz\u00f3r''''lub''typu''atrybut musi by\u0107 podany do konwersji warto\u015bci''''{0}.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time.
-javax.faces.converter.DateTimeConverter.TIME=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiany jako czas.
+javax.faces.converter.DateTimeConverter.TIME=''''{0} nie mo\u017ce by\u0107 rozumiany jako czas.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time. Example: {1}
-javax.faces.converter.DateTimeConverter.TIME_detail=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiany jako czas. Przyk\u0142ad: {1}
+javax.faces.converter.DateTimeConverter.TIME_detail=''''{0} nie mo\u017ce by\u0107 rozumiany jako czas. Przyk\u0142ad: {1}
 
 # google translation: please check
 #en: ''{0}'' must be a number consisting of one or more digits.
-javax.faces.converter.DoubleConverter.DOUBLE=&#39;&#39;&#39;&#39;{0} musi by\u0107 liczb\u0105 sk\u0142adaj\u0105c\u0105 si\u0119 z jednego lub wi\u0119cej cyfr.
+javax.faces.converter.DoubleConverter.DOUBLE=''''{0} musi by\u0107 liczb\u0105 sk\u0142adaj\u0105c\u0105 si\u0119 z jednego lub wi\u0119cej cyfr.
 
 # google translation: please check
 #en: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: 66.6
-javax.faces.converter.DoubleConverter.DOUBLE_detail=&#39;&#39;{0}&#39;&#39;musi by\u0107 liczb\u0105 pomi\u0119dzy 4.9E-324 i 1.7976931348623157E308 Przyk\u0142ad: 66.6
+javax.faces.converter.DoubleConverter.DOUBLE_detail=''{0}''musi by\u0107 liczb\u0105 pomi\u0119dzy 4.9E-324 i 1.7976931348623157E308 Przyk\u0142ad: 66.6
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value.
-javax.faces.converter.NumberConverter.CURRENCY=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 waluty.
+javax.faces.converter.NumberConverter.CURRENCY=''''{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 waluty.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value. Example: {1}
-javax.faces.converter.NumberConverter.CURRENCY_detail=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 waluty. Przyk\u0142ad: {1}
+javax.faces.converter.NumberConverter.CURRENCY_detail=''''{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 waluty. Przyk\u0142ad: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number.
-javax.faces.converter.NumberConverter.NUMBER=&#39;&#39;&#39;&#39;{0} nie jest liczb\u0105.
+javax.faces.converter.NumberConverter.NUMBER=''''{0} nie jest liczb\u0105.
 
 # google translation: please check
 #en: ''{0}'' is not a number. Example: {1}
-javax.faces.converter.NumberConverter.NUMBER_detail=&#39;&#39;&#39;&#39;{0} nie jest liczb\u0105. Przyk\u0142ad: {1}
+javax.faces.converter.NumberConverter.NUMBER_detail=''''{0} nie jest liczb\u0105. Przyk\u0142ad: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern.
-javax.faces.converter.NumberConverter.PATTERN=&#39;&#39;&#39;&#39;{0} nie wz\u00f3r numer.
+javax.faces.converter.NumberConverter.PATTERN=''''{0} nie wz\u00f3r numer.
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern. Example: {1}
-javax.faces.converter.NumberConverter.PATTERN_detail=&#39;&#39;&#39;&#39;{0} nie wz\u00f3r numer. Przyk\u0142ad: {1}
+javax.faces.converter.NumberConverter.PATTERN_detail=''''{0} nie wz\u00f3r numer. Przyk\u0142ad: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage.
-javax.faces.converter.NumberConverter.PERCENT=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 procentowa.
+javax.faces.converter.NumberConverter.PERCENT=''''{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 procentowa.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage. Example: {1}
-javax.faces.converter.NumberConverter.PERCENT_detail=&#39;&#39;&#39;&#39;{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 procentowa. Przyk\u0142ad: {1}
+javax.faces.converter.NumberConverter.PERCENT_detail=''''{0} nie mo\u017ce by\u0107 rozumiana jako warto\u015b\u0107 procentowa. Przyk\u0142ad: {1}
 
 # Human translation
 #en: Value is greater than allowable maximum of {0}
@@ -2925,11 +2925,11 @@ label.contentview.export.atom=ATOM Export
 
 # google translation: please check
 #en: ATOM feed for content view ''{0}''
-label.contentview.export.atom.title=Atom dla zawarto\u015bci widoku&#39;&#39;{0}&#39;&#39;
+label.contentview.export.atom.title=Atom dla zawarto\u015bci widoku''{0}''
 
 # google translation: please check
 #en: ATOM feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.atom.titleWithDocument=Atom dla&#39;&#39;dokument&#39;&#39;{0} i wy\u015bwietla\u0107 tre\u015b\u0107&#39;&#39;{1}&#39;&#39;
+label.contentview.export.atom.titleWithDocument=Atom dla''dokument''{0} i wy\u015bwietla\u0107 tre\u015b\u0107''{1}''
 
 # google translation: please check
 #en: CSV Export
@@ -2949,11 +2949,11 @@ label.contentview.export.rss=Eksport RSS
 
 # google translation: please check
 #en: RSS feed for content view ''{0}''
-label.contentview.export.rss.title=RSS dla zawarto\u015bci widoku&#39;&#39;{0}&#39;&#39;
+label.contentview.export.rss.title=RSS dla zawarto\u015bci widoku''{0}''
 
 # google translation: please check
 #en: RSS feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.rss.titleWithDocument=RSS dla&#39;&#39;dokument&#39;&#39;{0} i wy\u015bwietla\u0107 tre\u015b\u0107&#39;&#39;{1}&#39;&#39;
+label.contentview.export.rss.titleWithDocument=RSS dla''dokument''{0} i wy\u015bwietla\u0107 tre\u015b\u0107''{1}''
 
 # google translation: please check
 #en: Excel Export
