--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_vn.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_vn.properties
@@ -2271,7 +2271,7 @@ label.directories.country.Costa_Rica=Costa Rica
 # Human translation
 #en: Cote D'Ivoire
 label.directories.country.Cote_D_Ivoire=Cote D'Ivoire
-#google: Cote D&#39;Ivoire
+#google: Cote D'Ivoire
 
 # Human translation
 #en: Croatia
