--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ar.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ar.properties
@@ -1743,7 +1743,7 @@ documentMoved=\u0646\u0642\u0644
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=\u062f\u0648\u0631\u0629 \u062d\u064a\u0627\u0629 \u0627\u0644\u0648\u062b\u064a\u0642\u0629 \u0644\u0627 \u064a\u0648\u062c\u062f \u0644\u062f\u064a\u0647 &#39;\u062d\u0630\u0641&#39; \u0627\u0644\u062f\u0648\u0644\u0629. \u0627\u0644\u0639\u0645\u0644\u064a\u0629 \u0644\u064a\u0633\u062a posible \u0639\u0646 :
+document_no_deleted_state=\u062f\u0648\u0631\u0629 \u062d\u064a\u0627\u0629 \u0627\u0644\u0648\u062b\u064a\u0642\u0629 \u0644\u0627 \u064a\u0648\u062c\u062f \u0644\u062f\u064a\u0647 '\u062d\u0630\u0641' \u0627\u0644\u062f\u0648\u0644\u0629. \u0627\u0644\u0639\u0645\u0644\u064a\u0629 \u0644\u064a\u0633\u062a posible \u0639\u0646 :
 
 # Human translation
 #en: Publication approved
@@ -2000,7 +2000,7 @@ error.smart.query.invalidQuery=\u0627\u0644\u0627\u0633\u062a\u0639\u0644\u0627\
 
 # google translation: please check
 #en: There is more than one criterion using ''{0}''
-error.sortInfoValidator.conflictingCriteria=\u0647\u0646\u0627\u0643 \u0623\u0643\u062b\u0631 \u0645\u0646 \u0645\u0639\u064a\u0627\u0631 \u0648\u0627\u062d\u062f \u0628\u0627\u0633\u062a\u062e\u062f\u0627\u0645 {0} &#39;&#39;
+error.sortInfoValidator.conflictingCriteria=\u0647\u0646\u0627\u0643 \u0623\u0643\u062b\u0631 \u0645\u0646 \u0645\u0639\u064a\u0627\u0631 \u0648\u0627\u062d\u062f \u0628\u0627\u0633\u062a\u062e\u062f\u0627\u0645 {0} ''
 
 # google translation: please check
 #en: There is an empty sort criterion
@@ -2395,71 +2395,71 @@ javax.faces.component.UISelectOne.INVALID=\u0647\u0630\u0647 \u0627\u0644\u0642\
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date.
-javax.faces.converter.DateTimeConverter.DATE=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u062a\u0627\u0631\u064a\u062e.
+javax.faces.converter.DateTimeConverter.DATE='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u062a\u0627\u0631\u064a\u062e.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date. Example: {1}
-javax.faces.converter.DateTimeConverter.DATE_detail=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u062a\u0627\u0631\u064a\u062e. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
+javax.faces.converter.DateTimeConverter.DATE_detail='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u062a\u0627\u0631\u064a\u062e. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time.
-javax.faces.converter.DateTimeConverter.DATETIME=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0627\u0644\u062a\u0627\u0631\u064a\u062e \u0648\u0627\u0644\u0648\u0642\u062a.
+javax.faces.converter.DateTimeConverter.DATETIME='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0627\u0644\u062a\u0627\u0631\u064a\u062e \u0648\u0627\u0644\u0648\u0642\u062a.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time. Example: {1}
-javax.faces.converter.DateTimeConverter.DATETIME_detail=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0627\u0644\u062a\u0627\u0631\u064a\u062e \u0648\u0627\u0644\u0648\u0642\u062a. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
+javax.faces.converter.DateTimeConverter.DATETIME_detail='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0627\u0644\u062a\u0627\u0631\u064a\u062e \u0648\u0627\u0644\u0648\u0642\u062a. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
 
 # google translation: please check
 #en: A ''pattern'' or ''type'' attribute must be specified to convert the value ''{0}''.
-javax.faces.converter.DateTimeConverter.PATTERN_TYPE=\u0648\u062b\u0645\u0629 \u0646\u0645\u0637 &#39;&#39;\u0623\u0648&#39;&#39; \u064a\u062c\u0628 \u062a\u062d\u062f\u064a\u062f \u0646\u0648\u0639 \u00ab\u0633\u0645\u0629 \u0644\u062a\u062d\u0648\u064a\u0644 \u0627\u0644\u0642\u064a\u0645\u0629&#39;&#39; {0}.
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE=\u0648\u062b\u0645\u0629 \u0646\u0645\u0637 ''\u0623\u0648'' \u064a\u062c\u0628 \u062a\u062d\u062f\u064a\u062f \u0646\u0648\u0639 \u00ab\u0633\u0645\u0629 \u0644\u062a\u062d\u0648\u064a\u0644 \u0627\u0644\u0642\u064a\u0645\u0629'' {0}.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time.
-javax.faces.converter.DateTimeConverter.TIME=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0648\u0642\u062a \u0648\u0627\u062d\u062f.
+javax.faces.converter.DateTimeConverter.TIME='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0648\u0642\u062a \u0648\u0627\u062d\u062f.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time. Example: {1}
-javax.faces.converter.DateTimeConverter.TIME_detail=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0648\u0642\u062a \u0648\u0627\u062d\u062f. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
+javax.faces.converter.DateTimeConverter.TIME_detail='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0648\u0642\u062a \u0648\u0627\u062d\u062f. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
 
 # google translation: please check
 #en: ''{0}'' must be a number consisting of one or more digits.
-javax.faces.converter.DoubleConverter.DOUBLE=&#39;&#39;&#39;&#39; \u064a\u062c\u0628 \u0623\u0646 \u064a\u0643\u0648\u0646 \u0647\u0646\u0627\u0643 \u0639\u062f\u062f {0} \u062a\u062a\u0643\u0648\u0646 \u0645\u0646 \u0648\u0627\u062d\u062f \u0623\u0648 \u0623\u0643\u062b\u0631 \u0645\u0646 \u0623\u0631\u0642\u0627\u0645.
+javax.faces.converter.DoubleConverter.DOUBLE='''' \u064a\u062c\u0628 \u0623\u0646 \u064a\u0643\u0648\u0646 \u0647\u0646\u0627\u0643 \u0639\u062f\u062f {0} \u062a\u062a\u0643\u0648\u0646 \u0645\u0646 \u0648\u0627\u062d\u062f \u0623\u0648 \u0623\u0643\u062b\u0631 \u0645\u0646 \u0623\u0631\u0642\u0627\u0645.
 
 # google translation: please check
 #en: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: 66.6
-javax.faces.converter.DoubleConverter.DOUBLE_detail=&#39;&#39;&#39;&#39; {0} \u064a\u062c\u0628 \u0623\u0646 \u064a\u0643\u0648\u0646 \u0631\u0642\u0645\u0627 \u0628\u064a\u0646 324 - 4.9E \u0648\u0645\u062b\u0627\u0644 1.7976931348623157E308 : 66\u060c6
+javax.faces.converter.DoubleConverter.DOUBLE_detail='''' {0} \u064a\u062c\u0628 \u0623\u0646 \u064a\u0643\u0648\u0646 \u0631\u0642\u0645\u0627 \u0628\u064a\u0646 324 - 4.9E \u0648\u0645\u062b\u0627\u0644 1.7976931348623157E308 : 66\u060c6
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value.
-javax.faces.converter.NumberConverter.CURRENCY=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0642\u064a\u0645\u0629 \u0627\u0644\u0639\u0645\u0644\u0629.
+javax.faces.converter.NumberConverter.CURRENCY='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0642\u064a\u0645\u0629 \u0627\u0644\u0639\u0645\u0644\u0629.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value. Example: {1}
-javax.faces.converter.NumberConverter.CURRENCY_detail=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0642\u064a\u0645\u0629 \u0627\u0644\u0639\u0645\u0644\u0629. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
+javax.faces.converter.NumberConverter.CURRENCY_detail='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u062a\u0641\u0647\u0645 \u0639\u0644\u0649 \u0623\u0646\u0647\u0627 {0} \u0642\u064a\u0645\u0629 \u0627\u0644\u0639\u0645\u0644\u0629. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number.
-javax.faces.converter.NumberConverter.NUMBER=&#39;&#39;{0} \u0644\u064a\u0633 \u0639\u062f\u062f\u0627.
+javax.faces.converter.NumberConverter.NUMBER=''{0} \u0644\u064a\u0633 \u0639\u062f\u062f\u0627.
 
 # google translation: please check
 #en: ''{0}'' is not a number. Example: {1}
-javax.faces.converter.NumberConverter.NUMBER_detail=&#39;&#39;{0} \u0644\u064a\u0633 \u0639\u062f\u062f\u0627. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
+javax.faces.converter.NumberConverter.NUMBER_detail=''{0} \u0644\u064a\u0633 \u0639\u062f\u062f\u0627. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern.
-javax.faces.converter.NumberConverter.PATTERN=&#39;&#39;{0} \u0644\u064a\u0633 \u0646\u0645\u0637 \u0631\u0642\u0645.
+javax.faces.converter.NumberConverter.PATTERN=''{0} \u0644\u064a\u0633 \u0646\u0645\u0637 \u0631\u0642\u0645.
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern. Example: {1}
-javax.faces.converter.NumberConverter.PATTERN_detail=&#39;&#39;{0} \u0644\u064a\u0633 \u0646\u0645\u0637 \u0631\u0642\u0645. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
+javax.faces.converter.NumberConverter.PATTERN_detail=''{0} \u0644\u064a\u0633 \u0646\u0645\u0637 \u0631\u0642\u0645. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage.
-javax.faces.converter.NumberConverter.PERCENT=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u0646\u0633\u0628\u0629 \u0645\u0626\u0648\u064a\u0629.
+javax.faces.converter.NumberConverter.PERCENT='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u0646\u0633\u0628\u0629 \u0645\u0626\u0648\u064a\u0629.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage. Example: {1}
-javax.faces.converter.NumberConverter.PERCENT_detail=&#39;&#39;&#39;&#39; \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u0646\u0633\u0628\u0629 \u0645\u0626\u0648\u064a\u0629. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
+javax.faces.converter.NumberConverter.PERCENT_detail='''' \u0644\u0627 \u064a\u0645\u0643\u0646 \u0623\u0646 \u064a\u0641\u0647\u0645 {0} \u0643\u0646\u0633\u0628\u0629 \u0645\u0626\u0648\u064a\u0629. \u0639\u0644\u0649 \u0633\u0628\u064a\u0644 \u0627\u0644\u0645\u062b\u0627\u0644 : {1}
 
 # Human translation
 #en: Value is greater than allowable maximum of {0}
@@ -2925,11 +2925,11 @@ label.contentview.export.atom=\u062a\u0635\u062f\u064a\u0631 \u0627\u0644\u0630\
 
 # google translation: please check
 #en: ATOM feed for content view ''{0}''
-label.contentview.export.atom.title=\u0630\u0631\u0629 \u062a\u063a\u0630\u064a\u0629 \u0644\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {0} &#39;&#39;&#39;&#39;
+label.contentview.export.atom.title=\u0630\u0631\u0629 \u062a\u063a\u0630\u064a\u0629 \u0644\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {0} ''''
 
 # google translation: please check
 #en: ATOM feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.atom.titleWithDocument=\u0630\u0631\u0629 \u062a\u063a\u0630\u064a\u0629 \u0644&#39;&#39;\u0627\u0644\u0648\u062b\u064a\u0642\u0629&#39;&#39; {0} \u0648\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {1} &#39;&#39;&#39;&#39;
+label.contentview.export.atom.titleWithDocument=\u0630\u0631\u0629 \u062a\u063a\u0630\u064a\u0629 \u0644''\u0627\u0644\u0648\u062b\u064a\u0642\u0629'' {0} \u0648\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {1} ''''
 
 # google translation: please check
 #en: CSV Export
@@ -2949,11 +2949,11 @@ label.contentview.export.rss=\u0622\u0631 \u0625\u0633 \u0625\u0633 \u062a\u0635
 
 # google translation: please check
 #en: RSS feed for content view ''{0}''
-label.contentview.export.rss.title=\u0622\u0631 \u0625\u0633 \u0625\u0633 \u0644\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {0} &#39;&#39;&#39;&#39;
+label.contentview.export.rss.title=\u0622\u0631 \u0625\u0633 \u0625\u0633 \u0644\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {0} ''''
 
 # google translation: please check
 #en: RSS feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.rss.titleWithDocument=\u0622\u0631 \u0625\u0633 \u0625\u0633 \u0644\u0644&#39;&#39;\u0627\u0644\u0648\u062b\u064a\u0642\u0629&#39;&#39; {0} \u0648\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {1} &#39;&#39;&#39;&#39;
+label.contentview.export.rss.titleWithDocument=\u0622\u0631 \u0625\u0633 \u0625\u0633 \u0644\u0644''\u0627\u0644\u0648\u062b\u064a\u0642\u0629'' {0} \u0648\u0639\u0631\u0636 \u0627\u0644\u0645\u062d\u062a\u0648\u0649 {1} ''''
 
 # google translation: please check
 #en: Excel Export
