--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_de.properties
@@ -678,7 +678,7 @@ adminsubtab.usersActivity.userSessions.timerange=Liste aktiver Sitzungen innerha
 
 # google translation: please check
 #en: User's HTTP Sessions
-adminsubtab.usersActivity.userSessions.title=User&#39;s HTTP-Sitzungen
+adminsubtab.usersActivity.userSessions.title=User's HTTP-Sitzungen
 
 # google translation: please check
 #en: Total number of active HTTP Sessions
@@ -1743,7 +1743,7 @@ documentMoved=Verschieben
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=Document Lifecycle hat keine &#39;deleted&#39; Zustand. Die Bedienung ist nicht posible f\u00fcr:
+document_no_deleted_state=Document Lifecycle hat keine 'deleted' Zustand. Die Bedienung ist nicht posible f\u00fcr:
 
 # Human translation
 #en: Publication approved
@@ -2000,7 +2000,7 @@ error.smart.query.invalidQuery=Ung\u00fcltige Abfrage
 
 # google translation: please check
 #en: There is more than one criterion using ''{0}''
-error.sortInfoValidator.conflictingCriteria=Es ist mehr als ein Kriterium mit&#39;&#39;&#39;&#39;{0}
+error.sortInfoValidator.conflictingCriteria=Es ist mehr als ein Kriterium mit''''{0}
 
 # google translation: please check
 #en: There is an empty sort criterion
@@ -2395,71 +2395,71 @@ javax.faces.component.UISelectOne.INVALID=Wert ist keine g\u00fcltige Option
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date.
-javax.faces.converter.DateTimeConverter.DATE=&#39;&#39;&#39;&#39;{0} konnte nicht als Datum verstanden werden.
+javax.faces.converter.DateTimeConverter.DATE=''''{0} konnte nicht als Datum verstanden werden.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date. Example: {1}
-javax.faces.converter.DateTimeConverter.DATE_detail=&#39;&#39;&#39;&#39;{0} konnte nicht als Datum verstanden werden. Beispiel: {1}
+javax.faces.converter.DateTimeConverter.DATE_detail=''''{0} konnte nicht als Datum verstanden werden. Beispiel: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time.
-javax.faces.converter.DateTimeConverter.DATETIME=&#39;&#39;&#39;&#39;{0} konnte nicht als Datum und Zeit verstanden werden.
+javax.faces.converter.DateTimeConverter.DATETIME=''''{0} konnte nicht als Datum und Zeit verstanden werden.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time. Example: {1}
-javax.faces.converter.DateTimeConverter.DATETIME_detail=&#39;&#39;&#39;&#39;{0} konnte nicht als Datum und Zeit verstanden werden. Beispiel: {1}
+javax.faces.converter.DateTimeConverter.DATETIME_detail=''''{0} konnte nicht als Datum und Zeit verstanden werden. Beispiel: {1}
 
 # google translation: please check
 #en: A ''pattern'' or ''type'' attribute must be specified to convert the value ''{0}''.
-javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Ein&#39;&#39;Muster&#39;&#39;oder&#39;&#39;Typ&#39;&#39;Attribut muss angegeben werden, um den Wert&#39;&#39;&#39;&#39;{0} umzuwandeln.
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Ein''Muster''oder''Typ''Attribut muss angegeben werden, um den Wert''''{0} umzuwandeln.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time.
-javax.faces.converter.DateTimeConverter.TIME=&#39;&#39;&#39;&#39;{0} konnte nicht als Zeit verstanden werden.
+javax.faces.converter.DateTimeConverter.TIME=''''{0} konnte nicht als Zeit verstanden werden.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time. Example: {1}
-javax.faces.converter.DateTimeConverter.TIME_detail=&#39;&#39;&#39;&#39;{0} konnte nicht als Zeit verstanden werden. Beispiel: {1}
+javax.faces.converter.DateTimeConverter.TIME_detail=''''{0} konnte nicht als Zeit verstanden werden. Beispiel: {1}
 
 # google translation: please check
 #en: ''{0}'' must be a number consisting of one or more digits.
-javax.faces.converter.DoubleConverter.DOUBLE=&#39;&#39;&#39;&#39;{0} muss eine Zahl, bestehend aus einer oder mehreren Ziffern werden.
+javax.faces.converter.DoubleConverter.DOUBLE=''''{0} muss eine Zahl, bestehend aus einer oder mehreren Ziffern werden.
 
 # google translation: please check
 #en: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: 66.6
-javax.faces.converter.DoubleConverter.DOUBLE_detail=66,6:&#39;&#39;&#39;&#39;{0} muss eine Zahl zwischen 4.9E-324 und 1.7976931348623157E308 Beispiel werden
+javax.faces.converter.DoubleConverter.DOUBLE_detail=66,6:''''{0} muss eine Zahl zwischen 4.9E-324 und 1.7976931348623157E308 Beispiel werden
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value.
-javax.faces.converter.NumberConverter.CURRENCY=&#39;&#39;&#39;&#39;{0} konnte nicht als W\u00e4hrung Wert verstanden werden.
+javax.faces.converter.NumberConverter.CURRENCY=''''{0} konnte nicht als W\u00e4hrung Wert verstanden werden.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value. Example: {1}
-javax.faces.converter.NumberConverter.CURRENCY_detail=&#39;&#39;&#39;&#39;{0} konnte nicht als W\u00e4hrung Wert verstanden werden. Beispiel: {1}
+javax.faces.converter.NumberConverter.CURRENCY_detail=''''{0} konnte nicht als W\u00e4hrung Wert verstanden werden. Beispiel: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number.
-javax.faces.converter.NumberConverter.NUMBER=&#39;&#39;&#39;&#39;{0} ist keine Nummer.
+javax.faces.converter.NumberConverter.NUMBER=''''{0} ist keine Nummer.
 
 # google translation: please check
 #en: ''{0}'' is not a number. Example: {1}
-javax.faces.converter.NumberConverter.NUMBER_detail=&#39;&#39;&#39;&#39;{0} ist keine Nummer. Beispiel: {1}
+javax.faces.converter.NumberConverter.NUMBER_detail=''''{0} ist keine Nummer. Beispiel: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern.
-javax.faces.converter.NumberConverter.PATTERN=&#39;&#39;&#39;&#39;{0} ist keine Zahl Muster.
+javax.faces.converter.NumberConverter.PATTERN=''''{0} ist keine Zahl Muster.
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern. Example: {1}
-javax.faces.converter.NumberConverter.PATTERN_detail=&#39;&#39;&#39;&#39;{0} ist keine Zahl Muster. Beispiel: {1}
+javax.faces.converter.NumberConverter.PATTERN_detail=''''{0} ist keine Zahl Muster. Beispiel: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage.
-javax.faces.converter.NumberConverter.PERCENT=&#39;&#39;&#39;&#39;{0} konnte nicht als Prozentsatz zu verstehen.
+javax.faces.converter.NumberConverter.PERCENT=''''{0} konnte nicht als Prozentsatz zu verstehen.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage. Example: {1}
-javax.faces.converter.NumberConverter.PERCENT_detail=&#39;&#39;&#39;&#39;{0} konnte nicht als Prozentsatz zu verstehen. Beispiel: {1}
+javax.faces.converter.NumberConverter.PERCENT_detail=''''{0} konnte nicht als Prozentsatz zu verstehen. Beispiel: {1}
 
 # Human translation
 #en: Value is greater than allowable maximum of {0}
@@ -2925,11 +2925,11 @@ label.contentview.export.atom=ATOM Export
 
 # google translation: please check
 #en: ATOM feed for content view ''{0}''
-label.contentview.export.atom.title=ATOM-Feed f\u00fcr Inhalte sehen&#39;&#39;&#39;&#39;{0}
+label.contentview.export.atom.title=ATOM-Feed f\u00fcr Inhalte sehen''''{0}
 
 # google translation: please check
 #en: ATOM feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.atom.titleWithDocument=ATOM-Feed f\u00fcr Dokument&#39;&#39;{0}&#39;&#39;und&#39;&#39;Inhalt anzuzeigen {1}&#39;&#39;
+label.contentview.export.atom.titleWithDocument=ATOM-Feed f\u00fcr Dokument''{0}''und''Inhalt anzuzeigen {1}''
 
 # google translation: please check
 #en: CSV Export
@@ -2949,11 +2949,11 @@ label.contentview.export.rss=RSS Export
 
 # google translation: please check
 #en: RSS feed for content view ''{0}''
-label.contentview.export.rss.title=RSS-Feeds f\u00fcr Content-Ansicht&#39;&#39;&#39;&#39;{0}
+label.contentview.export.rss.title=RSS-Feeds f\u00fcr Content-Ansicht''''{0}
 
 # google translation: please check
 #en: RSS feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.rss.titleWithDocument=RSS-Feed f\u00fcr Dokument&#39;&#39;{0}&#39;&#39;und&#39;&#39;Inhalt anzuzeigen {1}&#39;&#39;
+label.contentview.export.rss.titleWithDocument=RSS-Feed f\u00fcr Dokument''{0}''und''Inhalt anzuzeigen {1}''
 
 # google translation: please check
 #en: Excel Export
@@ -3346,7 +3346,7 @@ label.directories.country.Costa_Rica=Costa Rica
 # Human translation
 #en: Cote D'Ivoire
 label.directories.country.Cote_D_Ivoire=Cote D'Ivoire
-#google: Cote D&#39;Ivoire
+#google: Cote D'Ivoire
 
 # Human translation
 #en: Croatia
@@ -3666,7 +3666,7 @@ label.directories.country.Kyrgyz_Republic=Kyrgyz Republic
 # Human translation
 #en: Lao People's Democratic Republic
 label.directories.country.Lao_People_s_Democratic_Republic=Lao People's Democratic Republic
-#google: Lao People&#39;s Democratic Republic
+#google: Lao People's Democratic Republic
 
 # Human translation
 #en: Latvia
