--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ja.properties
@@ -1743,7 +1743,7 @@ documentMoved=\u79fb\u52d5
 
 # google translation: please check
 #en: Document lifecycle has no 'deleted' state. Operation is not posible for:
-document_no_deleted_state=\u6587\u66f8\u306e\u30e9\u30a4\u30d5\u30b5\u30a4\u30af\u30eb\u306f\u3001&#39;\u524a\u9664&#39;\u72b6\u614b\u3092\u6301\u3063\u3066\u3044\u307e\u3059\u3002\u64cd\u4f5c\u306e\u305f\u3081\u3068\u308a\u3046\u308b\u3055\u308c\u3066\u3044\u306a\u3044\uff1a
+document_no_deleted_state=\u6587\u66f8\u306e\u30e9\u30a4\u30d5\u30b5\u30a4\u30af\u30eb\u306f\u3001'\u524a\u9664'\u72b6\u614b\u3092\u6301\u3063\u3066\u3044\u307e\u3059\u3002\u64cd\u4f5c\u306e\u305f\u3081\u3068\u308a\u3046\u308b\u3055\u308c\u3066\u3044\u306a\u3044\uff1a
 
 # Human translation
 #en: Publication approved
@@ -2000,7 +2000,7 @@ error.smart.query.invalidQuery=\u7121\u52b9\u306a\u30af\u30a8\u30ea
 
 # google translation: please check
 #en: There is more than one criterion using ''{0}''
-error.sortInfoValidator.conflictingCriteria=&#39;&#39;\u306e{0} &#39;&#39;\u3092\u4f7f\u7528\u3057\u3066\u8907\u6570\u306e\u6761\u4ef6\u304c\u3042\u308a\u307e\u3059
+error.sortInfoValidator.conflictingCriteria=''\u306e{0} ''\u3092\u4f7f\u7528\u3057\u3066\u8907\u6570\u306e\u6761\u4ef6\u304c\u3042\u308a\u307e\u3059
 
 # google translation: please check
 #en: There is an empty sort criterion
@@ -2395,71 +2395,71 @@ javax.faces.component.UISelectOne.INVALID=\u5024\u306f\u6709\u52b9\u306a\u30aa\u
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date.
-javax.faces.converter.DateTimeConverter.DATE=&#39;&#39; {0} &#39;&#39;\u306f\u65e5\u4ed8\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+javax.faces.converter.DateTimeConverter.DATE='' {0} ''\u306f\u65e5\u4ed8\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date. Example: {1}
-javax.faces.converter.DateTimeConverter.DATE_detail=&#39;&#39; {0} &#39;&#39;\u306f\u65e5\u4ed8\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
+javax.faces.converter.DateTimeConverter.DATE_detail='' {0} ''\u306f\u65e5\u4ed8\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time.
-javax.faces.converter.DateTimeConverter.DATETIME=&#39;&#39; {0} &#39;&#39;\u306f\u65e5\u4ed8\u3068\u6642\u523b\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+javax.faces.converter.DateTimeConverter.DATETIME='' {0} ''\u306f\u65e5\u4ed8\u3068\u6642\u523b\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time. Example: {1}
-javax.faces.converter.DateTimeConverter.DATETIME_detail=&#39;&#39; {0} &#39;&#39;\u306f\u65e5\u4ed8\u3068\u6642\u523b\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
+javax.faces.converter.DateTimeConverter.DATETIME_detail='' {0} ''\u306f\u65e5\u4ed8\u3068\u6642\u523b\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
 
 # google translation: please check
 #en: A ''pattern'' or ''type'' attribute must be specified to convert the value ''{0}''.
-javax.faces.converter.DateTimeConverter.PATTERN_TYPE=&#39;&#39;\u30d1\u30bf\u30fc\u30f3&#39;&#39;\u307e\u305f\u306f\u578b&#39;&#39;\u5c5e\u6027\u5024&#39;&#39; {0} &#39;&#39;\u3092\u5909\u63db\u3059\u308b\u305f\u3081\u306b\u6307\u5b9a\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE=''\u30d1\u30bf\u30fc\u30f3''\u307e\u305f\u306f\u578b''\u5c5e\u6027\u5024'' {0} ''\u3092\u5909\u63db\u3059\u308b\u305f\u3081\u306b\u6307\u5b9a\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time.
-javax.faces.converter.DateTimeConverter.TIME=&#39;&#39; {0} &#39;&#39;\u306f\u6642\u9593\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+javax.faces.converter.DateTimeConverter.TIME='' {0} ''\u306f\u6642\u9593\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time. Example: {1}
-javax.faces.converter.DateTimeConverter.TIME_detail=&#39;&#39; {0} &#39;&#39;\u306f\u6642\u9593\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
+javax.faces.converter.DateTimeConverter.TIME_detail='' {0} ''\u306f\u6642\u9593\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
 
 # google translation: please check
 #en: ''{0}'' must be a number consisting of one or more digits.
-javax.faces.converter.DoubleConverter.DOUBLE=&#39;&#39; {0} &#39;&#39;\u306f1\u6841\u4ee5\u4e0a\u306e\u6570\u5b57\u304b\u3089\u6210\u308b\u756a\u53f7\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
+javax.faces.converter.DoubleConverter.DOUBLE='' {0} ''\u306f1\u6841\u4ee5\u4e0a\u306e\u6570\u5b57\u304b\u3089\u6210\u308b\u756a\u53f7\u3067\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\u3002
 
 # google translation: please check
 #en: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: 66.6
-javax.faces.converter.DoubleConverter.DOUBLE_detail=66.6\uff1a&#39;&#39; {0} &#39;&#39;\u306f4.9E - 324\u30681.7976931348623157E308\u4f8b\u306e\u6570\u5b57\u3067\u3042\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059
+javax.faces.converter.DoubleConverter.DOUBLE_detail=66.6\uff1a'' {0} ''\u306f4.9E - 324\u30681.7976931348623157E308\u4f8b\u306e\u6570\u5b57\u3067\u3042\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value.
-javax.faces.converter.NumberConverter.CURRENCY=&#39;&#39; {0} &#39;&#39;\u3068\u306f\u3001\u901a\u8ca8\u5024\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+javax.faces.converter.NumberConverter.CURRENCY='' {0} ''\u3068\u306f\u3001\u901a\u8ca8\u5024\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value. Example: {1}
-javax.faces.converter.NumberConverter.CURRENCY_detail=&#39;&#39; {0} &#39;&#39;\u3068\u306f\u3001\u901a\u8ca8\u5024\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
+javax.faces.converter.NumberConverter.CURRENCY_detail='' {0} ''\u3068\u306f\u3001\u901a\u8ca8\u5024\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
 
 # google translation: please check
 #en: ''{0}'' is not a number.
-javax.faces.converter.NumberConverter.NUMBER=&#39;&#39; {0} &#39;&#39;\u306f\u756a\u53f7\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+javax.faces.converter.NumberConverter.NUMBER='' {0} ''\u306f\u756a\u53f7\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 
 # google translation: please check
 #en: ''{0}'' is not a number. Example: {1}
-javax.faces.converter.NumberConverter.NUMBER_detail=&#39;&#39; {0} &#39;&#39;\u306f\u756a\u53f7\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\u4f8b\uff1a{1}
+javax.faces.converter.NumberConverter.NUMBER_detail='' {0} ''\u306f\u756a\u53f7\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\u4f8b\uff1a{1}
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern.
-javax.faces.converter.NumberConverter.PATTERN=&#39;&#39; {0} &#39;&#39;\u306f\u6570\u30d1\u30bf\u30fc\u30f3\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
+javax.faces.converter.NumberConverter.PATTERN='' {0} ''\u306f\u6570\u30d1\u30bf\u30fc\u30f3\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern. Example: {1}
-javax.faces.converter.NumberConverter.PATTERN_detail=&#39;&#39; {0} &#39;&#39;\u306f\u6570\u30d1\u30bf\u30fc\u30f3\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\u4f8b\uff1a{1}
+javax.faces.converter.NumberConverter.PATTERN_detail='' {0} ''\u306f\u6570\u30d1\u30bf\u30fc\u30f3\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\u4f8b\uff1a{1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage.
-javax.faces.converter.NumberConverter.PERCENT=&#39;&#39; {0} &#39;&#39;\u306f\u5272\u5408\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
+javax.faces.converter.NumberConverter.PERCENT='' {0} ''\u306f\u5272\u5408\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage. Example: {1}
-javax.faces.converter.NumberConverter.PERCENT_detail=&#39;&#39; {0} &#39;&#39;\u306f\u5272\u5408\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
+javax.faces.converter.NumberConverter.PERCENT_detail='' {0} ''\u306f\u5272\u5408\u3068\u3057\u3066\u7406\u89e3\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002\u4f8b\uff1a{1}
 
 # Human translation
 #en: Value is greater than allowable maximum of {0}
@@ -2925,11 +2925,11 @@ label.contentview.export.atom=\u30a2\u30c8\u30e0\u306e\u30a8\u30af\u30b9\u30dd\u
 
 # google translation: please check
 #en: ATOM feed for content view ''{0}''
-label.contentview.export.atom.title=\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc&#39;&#39; {0} &#39;&#39;\u306eATOM\u30d5\u30a3\u30fc\u30c9
+label.contentview.export.atom.title=\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc'' {0} ''\u306eATOM\u30d5\u30a3\u30fc\u30c9
 
 # google translation: please check
 #en: ATOM feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.atom.titleWithDocument=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8&#39;&#39; {0} &#39;&#39;\u3068\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc&#39;&#39; {1} &#39;&#39;\u306eATOM\u30d5\u30a3\u30fc\u30c9
+label.contentview.export.atom.titleWithDocument=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8'' {0} ''\u3068\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc'' {1} ''\u306eATOM\u30d5\u30a3\u30fc\u30c9
 
 # google translation: please check
 #en: CSV Export
@@ -2949,11 +2949,11 @@ label.contentview.export.rss=RSS\u30a8\u30af\u30b9\u30dd\u30fc\u30c8
 
 # google translation: please check
 #en: RSS feed for content view ''{0}''
-label.contentview.export.rss.title=\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc&#39;&#39; {0} &#39;&#39;\u306eRSS\u30d5\u30a3\u30fc\u30c9
+label.contentview.export.rss.title=\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc'' {0} ''\u306eRSS\u30d5\u30a3\u30fc\u30c9
 
 # google translation: please check
 #en: RSS feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.rss.titleWithDocument=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8&#39;&#39; {0} &#39;&#39;\u3068\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc&#39;&#39; {1} &#39;&#39;\u306eRSS\u30d5\u30a3\u30fc\u30c9
+label.contentview.export.rss.titleWithDocument=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8'' {0} ''\u3068\u30b3\u30f3\u30c6\u30f3\u30c4\u30d3\u30e5\u30fc'' {1} ''\u306eRSS\u30d5\u30a3\u30fc\u30c9
 
 # google translation: please check
 #en: Excel Export
