--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_pt.properties
@@ -2000,7 +2000,7 @@ error.smart.query.invalidQuery=consulta inv\u00e1lido
 
 # google translation: please check
 #en: There is more than one criterion using ''{0}''
-error.sortInfoValidator.conflictingCriteria=H\u00e1 mais de um crit\u00e9rio usando {0}&#39;&#39;&#39;&#39;
+error.sortInfoValidator.conflictingCriteria=H\u00e1 mais de um crit\u00e9rio usando {0}''''
 
 # google translation: please check
 #en: There is an empty sort criterion
@@ -2395,71 +2395,71 @@ javax.faces.component.UISelectOne.INVALID=N\u00e3o \u00e9 uma op\u00e7\u00e3o v\
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date.
-javax.faces.converter.DateTimeConverter.DATE=&#39;&#39;&#39;&#39;{0} n\u00e3o pode ser entendida como uma data.
+javax.faces.converter.DateTimeConverter.DATE=''''{0} n\u00e3o pode ser entendida como uma data.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date. Example: {1}
-javax.faces.converter.DateTimeConverter.DATE_detail=&#39;&#39;&#39;&#39;{0} n\u00e3o pode ser entendida como uma data. Exemplo: {1}
+javax.faces.converter.DateTimeConverter.DATE_detail=''''{0} n\u00e3o pode ser entendida como uma data. Exemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time.
-javax.faces.converter.DateTimeConverter.DATETIME=&#39;&#39;&#39;&#39;{0} n\u00e3o poderia ser entendida como uma data e hora.
+javax.faces.converter.DateTimeConverter.DATETIME=''''{0} n\u00e3o poderia ser entendida como uma data e hora.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time. Example: {1}
-javax.faces.converter.DateTimeConverter.DATETIME_detail=&#39;&#39;&#39;&#39;{0} n\u00e3o poderia ser entendida como uma data e hora. Exemplo: {1}
+javax.faces.converter.DateTimeConverter.DATETIME_detail=''''{0} n\u00e3o poderia ser entendida como uma data e hora. Exemplo: {1}
 
 # google translation: please check
 #en: A ''pattern'' or ''type'' attribute must be specified to convert the value ''{0}''.
-javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Um padr\u00e3o&#39;&#39;&#39;&#39;ou&#39;&#39;tipo&#39;&#39;atributo deve ser especificado para converter o valor&#39;&#39;&#39;&#39;{0}.
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE=Um padr\u00e3o''''ou''tipo''atributo deve ser especificado para converter o valor''''{0}.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time.
-javax.faces.converter.DateTimeConverter.TIME=&#39;&#39;&#39;&#39;{0} n\u00e3o poderia ser entendido como um tempo.
+javax.faces.converter.DateTimeConverter.TIME=''''{0} n\u00e3o poderia ser entendido como um tempo.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time. Example: {1}
-javax.faces.converter.DateTimeConverter.TIME_detail=&#39;&#39;&#39;&#39;{0} n\u00e3o poderia ser entendido como um tempo. Exemplo: {1}
+javax.faces.converter.DateTimeConverter.TIME_detail=''''{0} n\u00e3o poderia ser entendido como um tempo. Exemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' must be a number consisting of one or more digits.
-javax.faces.converter.DoubleConverter.DOUBLE=&#39;&#39;&#39;&#39;{0} deve ser um n\u00famero composto de um ou mais d\u00edgitos.
+javax.faces.converter.DoubleConverter.DOUBLE=''''{0} deve ser um n\u00famero composto de um ou mais d\u00edgitos.
 
 # google translation: please check
 #en: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: 66.6
-javax.faces.converter.DoubleConverter.DOUBLE_detail=&#39;&#39;{0}&#39;&#39;deve ser um n\u00famero entre 4.9E-324 e 1.7976931348623157E308 Exemplo: 66,6
+javax.faces.converter.DoubleConverter.DOUBLE_detail=''{0}''deve ser um n\u00famero entre 4.9E-324 e 1.7976931348623157E308 Exemplo: 66,6
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value.
-javax.faces.converter.NumberConverter.CURRENCY=&#39;&#39;&#39;&#39;{0} n\u00e3o poderia ser entendida como um valor monet\u00e1rio.
+javax.faces.converter.NumberConverter.CURRENCY=''''{0} n\u00e3o poderia ser entendida como um valor monet\u00e1rio.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value. Example: {1}
-javax.faces.converter.NumberConverter.CURRENCY_detail=&#39;&#39;&#39;&#39;{0} n\u00e3o poderia ser entendida como um valor monet\u00e1rio. Exemplo: {1}
+javax.faces.converter.NumberConverter.CURRENCY_detail=''''{0} n\u00e3o poderia ser entendida como um valor monet\u00e1rio. Exemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number.
-javax.faces.converter.NumberConverter.NUMBER=&#39;&#39;&#39;&#39;{0} n\u00e3o \u00e9 um n\u00famero.
+javax.faces.converter.NumberConverter.NUMBER=''''{0} n\u00e3o \u00e9 um n\u00famero.
 
 # google translation: please check
 #en: ''{0}'' is not a number. Example: {1}
-javax.faces.converter.NumberConverter.NUMBER_detail=&#39;&#39;&#39;&#39;{0} n\u00e3o \u00e9 um n\u00famero. Exemplo: {1}
+javax.faces.converter.NumberConverter.NUMBER_detail=''''{0} n\u00e3o \u00e9 um n\u00famero. Exemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern.
-javax.faces.converter.NumberConverter.PATTERN=&#39;&#39;&#39;&#39;{0} n\u00e3o \u00e9 um padr\u00e3o de n\u00famero.
+javax.faces.converter.NumberConverter.PATTERN=''''{0} n\u00e3o \u00e9 um padr\u00e3o de n\u00famero.
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern. Example: {1}
-javax.faces.converter.NumberConverter.PATTERN_detail=&#39;&#39;&#39;&#39;{0} n\u00e3o \u00e9 um padr\u00e3o de n\u00famero. Exemplo: {1}
+javax.faces.converter.NumberConverter.PATTERN_detail=''''{0} n\u00e3o \u00e9 um padr\u00e3o de n\u00famero. Exemplo: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage.
-javax.faces.converter.NumberConverter.PERCENT=&#39;&#39;&#39;&#39;{0} n\u00e3o pode ser entendida como uma porcentagem.
+javax.faces.converter.NumberConverter.PERCENT=''''{0} n\u00e3o pode ser entendida como uma porcentagem.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage. Example: {1}
-javax.faces.converter.NumberConverter.PERCENT_detail=&#39;&#39;&#39;&#39;{0} n\u00e3o pode ser entendida como uma porcentagem. Exemplo: {1}
+javax.faces.converter.NumberConverter.PERCENT_detail=''''{0} n\u00e3o pode ser entendida como uma porcentagem. Exemplo: {1}
 
 # Human translation
 #en: Value is greater than allowable maximum of {0}
@@ -2925,11 +2925,11 @@ label.contentview.export.atom=ATOM Exporta\u00e7\u00e3o
 
 # google translation: please check
 #en: ATOM feed for content view ''{0}''
-label.contentview.export.atom.title=ATOM feed para visualizar o conte\u00fado {0}&#39;&#39;&#39;&#39;
+label.contentview.export.atom.title=ATOM feed para visualizar o conte\u00fado {0}''''
 
 # google translation: please check
 #en: ATOM feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.atom.titleWithDocument=ATOM feed para&#39;&#39;documento&#39;&#39;{0} e visualizar o conte\u00fado {1}&#39;&#39;&#39;&#39;
+label.contentview.export.atom.titleWithDocument=ATOM feed para''documento''{0} e visualizar o conte\u00fado {1}''''
 
 # google translation: please check
 #en: CSV Export
@@ -2949,11 +2949,11 @@ label.contentview.export.rss=Exporta\u00e7\u00e3o de RSS
 
 # google translation: please check
 #en: RSS feed for content view ''{0}''
-label.contentview.export.rss.title=RSS feed para visualizar o conte\u00fado {0}&#39;&#39;&#39;&#39;
+label.contentview.export.rss.title=RSS feed para visualizar o conte\u00fado {0}''''
 
 # google translation: please check
 #en: RSS feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.rss.titleWithDocument=RSS feed para&#39;&#39;documento&#39;&#39;{0} e visualizar o conte\u00fado {1}&#39;&#39;&#39;&#39;
+label.contentview.export.rss.titleWithDocument=RSS feed para''documento''{0} e visualizar o conte\u00fado {1}''''
 
 # google translation: please check
 #en: Excel Export
@@ -3346,7 +3346,7 @@ label.directories.country.Costa_Rica=Costa Rica
 # Human translation
 #en: Cote D'Ivoire
 label.directories.country.Cote_D_Ivoire=Costa de Marfil
-#google: Cote D&#39;Ivoire
+#google: Cote D'Ivoire
 
 # Human translation
 #en: Croatia
