--- a/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ru.properties
+++ b/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_ru.properties
@@ -2000,7 +2000,7 @@ error.smart.query.invalidQuery=\u041d\u0435\u0432\u0435\u0440\u043d\u044b\u0439 
 
 # google translation: please check
 #en: There is more than one criterion using ''{0}''
-error.sortInfoValidator.conflictingCriteria=\u0421\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442 \u0431\u043e\u043b\u0435\u0435 \u0447\u0435\u043c \u043e\u0434\u043d\u043e\u043c\u0443 \u043a\u0440\u0438\u0442\u0435\u0440\u0438\u044e \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043d\u0438\u0435\u043c {0}&#39;&#39;&#39;&#39;
+error.sortInfoValidator.conflictingCriteria=\u0421\u0443\u0449\u0435\u0441\u0442\u0432\u0443\u0435\u0442 \u0431\u043e\u043b\u0435\u0435 \u0447\u0435\u043c \u043e\u0434\u043d\u043e\u043c\u0443 \u043a\u0440\u0438\u0442\u0435\u0440\u0438\u044e \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043d\u0438\u0435\u043c {0}''''
 
 # google translation: please check
 #en: There is an empty sort criterion
@@ -2395,71 +2395,71 @@ javax.faces.component.UISelectOne.INVALID=Value is not a valid option
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date.
-javax.faces.converter.DateTimeConverter.DATE=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430.
+javax.faces.converter.DateTimeConverter.DATE=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date. Example: {1}
-javax.faces.converter.DateTimeConverter.DATE_detail=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
+javax.faces.converter.DateTimeConverter.DATE_detail=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time.
-javax.faces.converter.DateTimeConverter.DATETIME=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430 \u0438 \u0432\u0440\u0435\u043c\u044f.
+javax.faces.converter.DateTimeConverter.DATETIME=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430 \u0438 \u0432\u0440\u0435\u043c\u044f.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a date and time. Example: {1}
-javax.faces.converter.DateTimeConverter.DATETIME_detail=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430 \u0438 \u0432\u0440\u0435\u043c\u044f. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
+javax.faces.converter.DateTimeConverter.DATETIME_detail=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0434\u0430\u0442\u0430 \u0438 \u0432\u0440\u0435\u043c\u044f. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
 
 # google translation: please check
 #en: A ''pattern'' or ''type'' attribute must be specified to convert the value ''{0}''.
-javax.faces.converter.DateTimeConverter.PATTERN_TYPE=&#39;&#39;\u041e\u0431\u0440\u0430\u0437\u0435\u0446&#39;&#39;\u0438\u043b\u0438&#39;&#39;\u0442\u0438\u043f\u0430&#39;&#39;\u0430\u0442\u0440\u0438\u0431\u0443\u0442 \u0434\u043e\u043b\u0436\u0435\u043d \u0431\u044b\u0442\u044c \u0443\u043a\u0430\u0437\u0430\u043d \u0434\u043b\u044f \u043f\u0440\u0435\u043e\u0431\u0440\u0430\u0437\u043e\u0432\u0430\u043d\u0438\u044f \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044f&#39;&#39;{0}&#39;&#39;.
+javax.faces.converter.DateTimeConverter.PATTERN_TYPE=''\u041e\u0431\u0440\u0430\u0437\u0435\u0446''\u0438\u043b\u0438''\u0442\u0438\u043f\u0430''\u0430\u0442\u0440\u0438\u0431\u0443\u0442 \u0434\u043e\u043b\u0436\u0435\u043d \u0431\u044b\u0442\u044c \u0443\u043a\u0430\u0437\u0430\u043d \u0434\u043b\u044f \u043f\u0440\u0435\u043e\u0431\u0440\u0430\u0437\u043e\u0432\u0430\u043d\u0438\u044f \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044f''{0}''.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time.
-javax.faces.converter.DateTimeConverter.TIME=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0432\u0440\u0435\u043c\u044f.
+javax.faces.converter.DateTimeConverter.TIME=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0432\u0440\u0435\u043c\u044f.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a time. Example: {1}
-javax.faces.converter.DateTimeConverter.TIME_detail=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0432\u0440\u0435\u043c\u044f. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
+javax.faces.converter.DateTimeConverter.TIME_detail=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0432\u0440\u0435\u043c\u044f. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
 
 # google translation: please check
 #en: ''{0}'' must be a number consisting of one or more digits.
-javax.faces.converter.DoubleConverter.DOUBLE=&#39;&#39;&#39;&#39;{0} \u0434\u043e\u043b\u0436\u0435\u043d \u0431\u044b\u0442\u044c \u043d\u043e\u043c\u0435\u0440, \u0441\u043e\u0441\u0442\u043e\u044f\u0449\u0438\u0439 \u0438\u0437 \u043e\u0434\u043d\u043e\u0433\u043e \u0438\u043b\u0438 \u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u0438\u0445 \u0446\u0438\u0444\u0440.
+javax.faces.converter.DoubleConverter.DOUBLE=''''{0} \u0434\u043e\u043b\u0436\u0435\u043d \u0431\u044b\u0442\u044c \u043d\u043e\u043c\u0435\u0440, \u0441\u043e\u0441\u0442\u043e\u044f\u0449\u0438\u0439 \u0438\u0437 \u043e\u0434\u043d\u043e\u0433\u043e \u0438\u043b\u0438 \u043d\u0435\u0441\u043a\u043e\u043b\u044c\u043a\u0438\u0445 \u0446\u0438\u0444\u0440.
 
 # google translation: please check
 #en: ''{0}'' must be a number between 4.9E-324 and 1.7976931348623157E308  Example: 66.6
-javax.faces.converter.DoubleConverter.DOUBLE_detail=&#39;&#39;&#39;&#39;{0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0447\u0438\u0441\u043b\u043e \u043e\u0442 4.9E-324 \u0438 1.7976931348623157E308 \u041f\u0440\u0438\u043c\u0435\u0440: 66,6
+javax.faces.converter.DoubleConverter.DOUBLE_detail=''''{0} \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0447\u0438\u0441\u043b\u043e \u043e\u0442 4.9E-324 \u0438 1.7976931348623157E308 \u041f\u0440\u0438\u043c\u0435\u0440: 66,6
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value.
-javax.faces.converter.NumberConverter.CURRENCY=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0441\u0442\u043e\u0438\u043c\u043e\u0441\u0442\u0438 \u0432\u0430\u043b\u044e\u0442\u044b.
+javax.faces.converter.NumberConverter.CURRENCY=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0441\u0442\u043e\u0438\u043c\u043e\u0441\u0442\u0438 \u0432\u0430\u043b\u044e\u0442\u044b.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a currency value. Example: {1}
-javax.faces.converter.NumberConverter.CURRENCY_detail=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0441\u0442\u043e\u0438\u043c\u043e\u0441\u0442\u0438 \u0432\u0430\u043b\u044e\u0442\u044b. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
+javax.faces.converter.NumberConverter.CURRENCY_detail=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u043a\u0430\u043a \u0441\u0442\u043e\u0438\u043c\u043e\u0441\u0442\u0438 \u0432\u0430\u043b\u044e\u0442\u044b. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number.
-javax.faces.converter.NumberConverter.NUMBER=&#39;&#39;{0}&#39;&#39;\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c.
+javax.faces.converter.NumberConverter.NUMBER=''{0}''\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c.
 
 # google translation: please check
 #en: ''{0}'' is not a number. Example: {1}
-javax.faces.converter.NumberConverter.NUMBER_detail=&#39;&#39;{0}&#39;&#39;\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
+javax.faces.converter.NumberConverter.NUMBER_detail=''{0}''\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern.
-javax.faces.converter.NumberConverter.PATTERN=&#39;&#39;{0}&#39;&#39;\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c \u043a\u0430\u0440\u0442\u0438\u043d\u044b.
+javax.faces.converter.NumberConverter.PATTERN=''{0}''\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c \u043a\u0430\u0440\u0442\u0438\u043d\u044b.
 
 # google translation: please check
 #en: ''{0}'' is not a number pattern. Example: {1}
-javax.faces.converter.NumberConverter.PATTERN_detail=&#39;&#39;{0}&#39;&#39;\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c \u043a\u0430\u0440\u0442\u0438\u043d\u044b. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
+javax.faces.converter.NumberConverter.PATTERN_detail=''{0}''\u043d\u0435 \u044f\u0432\u043b\u044f\u0435\u0442\u0441\u044f \u0447\u0438\u0441\u043b\u043e\u043c \u043a\u0430\u0440\u0442\u0438\u043d\u044b. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage.
-javax.faces.converter.NumberConverter.PERCENT=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u0432 \u043f\u0440\u043e\u0446\u0435\u043d\u0442\u0430\u0445.
+javax.faces.converter.NumberConverter.PERCENT=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u0432 \u043f\u0440\u043e\u0446\u0435\u043d\u0442\u0430\u0445.
 
 # google translation: please check
 #en: ''{0}'' could not be understood as a percentage. Example: {1}
-javax.faces.converter.NumberConverter.PERCENT_detail=&#39;&#39;&#39;&#39;{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u0432 \u043f\u0440\u043e\u0446\u0435\u043d\u0442\u0430\u0445. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
+javax.faces.converter.NumberConverter.PERCENT_detail=''''{0} \u043d\u0435 \u043c\u043e\u0436\u0435\u0442 \u0431\u044b\u0442\u044c \u043f\u043e\u043d\u044f\u0442 \u0432 \u043f\u0440\u043e\u0446\u0435\u043d\u0442\u0430\u0445. \u041f\u0440\u0438\u043c\u0435\u0440: {1}
 
 # Human translation
 #en: Value is greater than allowable maximum of {0}
@@ -2925,11 +2925,11 @@ label.contentview.export.atom=ATOM \u044d\u043a\u0441\u043f\u043e\u0440\u0442
 
 # google translation: please check
 #en: ATOM feed for content view ''{0}''
-label.contentview.export.atom.title=ATOM \u043a\u0430\u043d\u0430\u043b \u0434\u043b\u044f \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0430 \u043a\u043e\u043d\u0442\u0435\u043d\u0442\u0430&#39;&#39;&#39;&#39;{0}
+label.contentview.export.atom.title=ATOM \u043a\u0430\u043d\u0430\u043b \u0434\u043b\u044f \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0430 \u043a\u043e\u043d\u0442\u0435\u043d\u0442\u0430''''{0}
 
 # google translation: please check
 #en: ATOM feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.atom.titleWithDocument=ATOM Feed \u0434\u043b\u044f \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u043e\u043c&#39;&#39;{0}&#39;&#39;\u0438&#39;&#39;\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0433\u043e {1}&#39;&#39;
+label.contentview.export.atom.titleWithDocument=ATOM Feed \u0434\u043b\u044f \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u043e\u043c''{0}''\u0438''\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0433\u043e {1}''
 
 # google translation: please check
 #en: CSV Export
@@ -2949,11 +2949,11 @@ label.contentview.export.rss=RSS \u044d\u043a\u0441\u043f\u043e\u0440\u0442
 
 # google translation: please check
 #en: RSS feed for content view ''{0}''
-label.contentview.export.rss.title=RSS \u043a\u0430\u043d\u0430\u043b \u0434\u043b\u044f \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0430 \u043a\u043e\u043d\u0442\u0435\u043d\u0442\u0430&#39;&#39;&#39;&#39;{0}
+label.contentview.export.rss.title=RSS \u043a\u0430\u043d\u0430\u043b \u0434\u043b\u044f \u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440\u0430 \u043a\u043e\u043d\u0442\u0435\u043d\u0442\u0430''''{0}
 
 # google translation: please check
 #en: RSS feed for document ''{0}'' and content view ''{1}''
-label.contentview.export.rss.titleWithDocument=RSS \u043a\u0430\u043d\u0430\u043b \u0434\u043b\u044f \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430&#39;&#39;{0}&#39;&#39;\u0438&#39;&#39;\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0433\u043e {1}&#39;&#39;
+label.contentview.export.rss.titleWithDocument=RSS \u043a\u0430\u043d\u0430\u043b \u0434\u043b\u044f \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430''{0}''\u0438''\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0433\u043e {1}''
 
 # google translation: please check
 #en: Excel Export
@@ -3346,7 +3346,7 @@ label.directories.country.Costa_Rica=\u041a\u043e\u0441\u0442\u0430-\u0420\u0438
 # Human translation
 #en: Cote D'Ivoire
 label.directories.country.Cote_D_Ivoire=\u041a\u043e\u0442-\u0434'\u0418\u0432\u0443\u0430\u0440
-#google: \u041a\u043e\u0442-\u0434&#39;\u0418\u0432\u0443\u0430\u0440
+#google: \u041a\u043e\u0442-\u0434'\u0418\u0432\u0443\u0430\u0440
 
 # Human translation
 #en: Croatia
